2010-10-19  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by David Kilzer.

        RVCT fails to compile DateMath.cpp due to overloaded function pow
        https://bugs.webkit.org/show_bug.cgi?id=47844

        Choose std::pow(double, double) among multiple overloaded pow functions
        to fix build for RVCT.

        * wtf/DateMath.cpp:
        (WTF::parseES5DateFromNullTerminatedCharacters):

2010-10-19  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by David Kilzer.

        Use UChar instead of wchar_t in UnicodeWinCE
        https://bugs.webkit.org/show_bug.cgi?id=47904

        Make UnicodeWinCE more portable, so we can use it for other ports too.

        * wtf/unicode/wince/UnicodeWinCE.cpp:
        (WTF::Unicode::toLower):
        (WTF::Unicode::toUpper):
        (WTF::Unicode::foldCase):
        (WTF::Unicode::isPrintableChar):
        (WTF::Unicode::isSpace):
        (WTF::Unicode::isLetter):
        (WTF::Unicode::isUpper):
        (WTF::Unicode::isLower):
        (WTF::Unicode::isDigit):
        (WTF::Unicode::isPunct):
        (WTF::Unicode::isAlphanumeric):
        (WTF::Unicode::toTitleCase):
        (WTF::Unicode::mirroredChar):
        (WTF::Unicode::digitValue):
        * wtf/unicode/wince/UnicodeWinCE.h:
        (WTF::Unicode::isSeparatorSpace):
        (WTF::Unicode::isHighSurrogate):
        (WTF::Unicode::isLowSurrogate):
        (WTF::Unicode::umemcasecmp):
        (WTF::Unicode::surrogateToUcs4):

2010-10-19  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Andreas Kling.

        Fix style of UnicodeWinCE
        https://bugs.webkit.org/show_bug.cgi?id=47818

        * wtf/unicode/wince/UnicodeWinCE.cpp:
        (WTF::Unicode::toLower):
        (WTF::Unicode::toUpper):
        * wtf/unicode/wince/UnicodeWinCE.h:

2010-10-18  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        * GNUmakefile.am: add missing file.

2010-10-18  Oliver Hunt  <oliver@apple.com>
